# Pico

./: README.md
C/: CMakeLists.txt  CurrentBoard.bat  SetBoardPico.bat  SetBoardPicoW.bat
C/Button/: CMakeLists.txt  main.c
C/Hello/: CMakeLists.txt
C/LED/: CMakeLists.txt  main.c
C/MultiCore/: CMakeLists.txt  main.c
C/PIO/: CMakeLists.txt  addition.pio  main.c
C/PIO/LED/: CMakeLists.txt  LED.pio  main.c
C/PIO/PWM/: CMakeLists.txt  PWM.pio  main.c
C/PWM/: CMakeLists.txt  main.c
C/Temperature/: CMakeLists.txt  main.c
C/Wifi/: CMakeLists.txt  main.c
Python/Button/: main.py
Python/GroveBuzzer/: main.py
Python/GroveLED/: main.py
Python/GroveMiniFan/: main.py
Python/GroveMotionSensor/: main.py
Python/GroveRotaryAngleSensor/: main.py
Python/LED/: main.py
Python/MultiCore/: main.py
Python/PIO/: main.py
Python/PIO/LED/: main.py
Python/PIO/PWM/: main.py
Python/PWM/: main.py
Python/Temperature/: main.py
Python/Wifi/: main.py
